fixed header layout bug

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -68,15 +68,18 @@ body {
 .main-nav {
     // height: 102px;
     background-color: $dark-green;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    min-height: 100px;
-    padding-left: 30px;
-    max-width: 1050px;
-    margin-left: auto;
-    margin-right: auto;
+
+    .main-nav-content {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        min-height: 100px;
+        padding-left: 30px;
+        max-width: 1050px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
     .logo {
         font-size: 2.8rem;
